# wiki_path_finder

./: .gitignore  README.md  build-wasm.py
analyser/: Cargo.toml
analyser/src/: main.rs
wasm/: .gitignore  Cargo.toml
wasm/src/: lib.rs
web/: package-lock.json  package.json
web/src/: index.css
web/src/lib/: wiki_graph.js
web/src/pkg/: package.json  wiki_graph.d.ts  wiki_graph.js  wiki_graph_bg.wasm.d.ts
web/src/routes/: +page.svelte
